fixing and making icon clickable on tablets

--- a/tutor/resources/styles/components/performance-forecast/heading.less
+++ b/tutor/resources/styles/components/performance-forecast/heading.less
@@ -26,6 +26,10 @@
     } 
   }
 
+  .info-link {
+    border: 0;
+    background: transparent;
+  }
   .info-link:after {
     padding-left: 10px;
     .fa-icon();
